fix whitespace between Katie and Kevin pt2

--- a/css/tlab-style.css
+++ b/css/tlab-style.css
@@ -101,6 +101,9 @@ img.emoji {
 .current-members {
 	clear: both;
 }
+.current-members > .student:nth-child(odd) {
+	clear: left;
+}
 
 .former-members img {
 	display: none;
